<resources>
    <string name="app_name">Login Test Case</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_title">Login</string>
    <string name="password_hint">Password</string>
    <string name="email_mobile_hint">Email / Mobile</string>
    <string name="register_text">Register</string>
    <string name="no_account_text">Don\'t have an account?</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="empty_fields_toast">Please enter email and password!</string>
    <string name="incorrect_email_password_toast">Incorrect email or password!</string>
    <string name="login_successful_toast">You logged in successfully!</string>
    <string name="welcome_text">Welcome to main screen!</string>
    <string name="logout_title">Logout</string>
    <string name="no_internet_connection_snack">No internet connection</string>
    <string name="dismiss_snack">Dismiss</string>
</resources>
